# digital-signal-processing

./: .gitignore  README.md  avl1.ipynb  avl2.ipynb  avl3.ipynb  pyproject.toml
LtspiceModels/: Filtro PassaBaixas_02.asc  PA_aula.asc  PA_aula.op.raw  PA_aula.raw  PA_teste.asc  Passa_alta.asc  Passa_altas wid.asc  Passa_altas wid.plt  Passa_bandas wid.asc
proteusModels/: FiltroPB_digital01.pdsprj  FiltroPB_digital01.pdsprj.WIDMARK-PC.widmark.workspace
proteusModels/FiltroPB_digital01/: FiltroPB_digital01.ino
