[tool.poetry]
name = "digital-signal-processing"
version = "0.1.0"
description = ""
authors = ["Widmark-Kaue <widmarkkaue.s.c@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
pathlib = "^1.0.1"
scipy = "^1.9.2"
simupy = "^1.1.2"
sympy = "^1.11.1"
control = "^0.9.2"
blue = "^0.9.1"
ipykernel = "^6.17.1"
ipynb = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
